test/compiler_errors/duplicate-resource.lzx
<!-- should generate warning about duplicate definitions of resources -->
<canvas width="240" height="320"> 
   <resource name="res1" src="../resources/gif/3c.gif"/>
   <resource name="res1" src="../resources/gif/3c.gif"/>

   <resource name="res2" src="../resources/gif/3c.gif"/>



</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2004 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
